Add date to report cover

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -22,7 +22,7 @@
 \begin{document}
 %
 \title{Information Processing}
-\subtitle{Coursework}
+\subtitle{Coursework - 6 April 2018}
 %
 %\titlerunning{Abbreviated paper title}
 % If the paper title is too long for the running head, you can set
@@ -39,8 +39,10 @@ University College London, United Kingdom}
 %
 \maketitle              % typeset the header of the contribution
 
-
-% \input{chapters/1_intro}
+% \input{chapters/0_introduction}
+\input{chapters/1_tpm}
+\input{chapters/2_segmentation}
+\input{chapters/3_stats}
 
 
 
