Remove my name from report

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -28,18 +28,16 @@
 % If the paper title is too long for the running head, you can set
 % an abbreviated paper title here
 %
-\author{Fernando {Pérez García} \inst{1,2}}
+\author{Student number 17113498 \inst{1}}
 %
-\authorrunning{F. {Pérez García}}
+\authorrunning{17113498}
 % First names are abbreviated in the running head.
 % If there are more than two authors, 'et al.' is used.
 %
-\institute{Wellcome / EPSRC Centre Interventional and Surgical Sciences \and
-University College London, United Kingdom}
+\institute{University College London, United Kingdom}
 %
 \maketitle              % typeset the header of the contribution
 
-% \input{chapters/0_introduction}
 \input{chapters/1_tpm}
 \input{chapters/2_segmentation}
 \input{chapters/3_stats}
