Fix module name

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -21,7 +21,7 @@
 
 \begin{document}
 %
-\title{Information Processing}
+\title{Information Processing in Medical Imaging}
 \subtitle{Coursework - 6 April 2018}
 %
 %\titlerunning{Abbreviated paper title}
