Force bibliography to be at the end of the doc
https://tex.stackexchange.com/a/28900

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -50,6 +50,7 @@
 % BibTeX users should specify bibliography style 'splncs04'.
 % References will then be sorted and formatted in the correct style.
 %
+\clearpage
 \bibliographystyle{splncs04}
 \bibliography{references}
 
