--- a/latex/main.tex
+++ b/latex/main.tex
@@ -28,7 +28,7 @@
 % If the paper title is too long for the running head, you can set
 % an abbreviated paper title here
 %
-\author{Student number 17113498 \inst{1}}
+\author{Student 17113498}
 %
 \authorrunning{17113498}
 % First names are abbreviated in the running head.
